@@ -1,3 +1,8 @@
+2004-11-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Merged in improvements for tile and winico handling
+	from Donal Fellows. (Patch #1061218).
+
 2004-10-29  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Add jabber port setting and disable when not in use.
